# stat4830

./: .gitignore  README.md  final-report-v0.md  main.py  pyproject.toml  report.md  run_n2_norm_comparison.sh  run_overnight.sh  run_rho_probe_malignant.sh  run_seed2.sh  self-critique.md
.final-deliverable/: demo.ipynb
.report/: 020626-week4-report.md  030626-week8-report.md  030626-week8-self-critique.md  032726-week10-report.md  032726-week10-self-critique.md  041026-week12-self-critique.md  report.html  report.md  report_tmp.html  self-critique_tmp.html
benchmark/: __main__.py  analysis.py  config.py  policy.py  run_sweep.py  runner.py  visualize_all.py
docs/: draft-v0-04-10.md  draft-v1.tex  draft-v2.dvi  empirical_so_far.md  experiment_protocol.md  session_20260411_mezo_fix.md  sketch.md  theory_es_scaling.md  week-12-report.tex
environments/: bootstrap_prime_vm.sh
legacy/week4/my_env/: my_env.py  pyproject.toml
notebooks/: ARS_Pendulum_Notebook.ipynb  lozo_replication.ipynb  week4_implementation.ipynb  week6_implementation.ipynb  week8_implementation.ipynb  week9_lozo_replication.ipynb  wordle_policy_gradient.ipynb
runtime_shims/: bash_env_lozo.sh  run_lozo_entrypoint.sh  sitecustomize.py
scripts/: run_n2_norm_comparison_resume.sh  run_norm_n2_batch.sh  run_norm_n2_math500.sh  run_norm_n2_retry_hfgated.sh  run_resume.sh  run_seed3.sh  run_seeds23.sh
src/: __init__.py  __main__.py  analysis.py  config.py  es.py  pg.py  policy_gradient.py  sweep_protocol.py  utils_prime.py  visualize_all.py  wordle.py
src/envs/: base.py
tests/: test_perturb.py
(+224 files in other folders)
