[project]
name = "wordle"
description = "Wordle game environment"
tags = ["textarena", "multi-turn", "reasoning", "game", "train", "eval"]
version = "0.1.7"
dependencies = [
    "verifiers>=0.1.9.post3",
    "nltk>=3.9.2",
    "textarena==0.7.4",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["wordle.py"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
